FInished UI for Single Source

--- a/finances-tracker/src/app/app.component.html
+++ b/finances-tracker/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-header [income]="41211" [outcome]="7541"></app-header>
-<app-finances-settings></app-finances-settings>
+<div style="padding:2em; height:36vh; width: 100vw">
+    <app-finances-settings></app-finances-settings>
+</div>
