--- a/finances-tracker/src/app/finances-configuration/finances-settings/finances-settings.component.html
+++ b/finances-tracker/src/app/finances-configuration/finances-settings/finances-settings.component.html
@@ -1,5 +1,5 @@
-<div class="d-flex justify-content-between">
-    <div *ngFor="let type of sourceTypes">
+<div class="d-flex justify-content-between h-100 w-100">
+    <div class="source" *ngFor="let type of sourceTypes">
         <app-source-result [sourceType]="type" [sources]="getSourcesByType(type)"></app-source-result>
     </div>
 </div>
