--- a/finances-tracker/src/app/finances-configuration/source-result/source-result.component.css
+++ b/finances-tracker/src/app/finances-configuration/source-result/source-result.component.css
@@ -3,4 +3,22 @@
     padding: 1.5em;
     font-weight: bold;
     font-size: 14px;
+    height: 100%;
+}
+
+p
+{
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: -.8em;
+}
+
+.tag
+{
+    border: solid;
+    border-color: black;
+    margin: .5em;
+    border-radius: 20px;
+    padding: 0em 1em;
+    background-color: rgb(255, 236, 127);
 }
