Added the charts, which shows incomes, outcomes and both

--- a/finances-tracker/src/app/app.component.html
+++ b/finances-tracker/src/app/app.component.html
@@ -1,4 +1,9 @@
 <app-header [income]="41211" [outcome]="7541"></app-header>
+<div class="d-flex justify-content-start title">Sources</div>
+<hr/>
 <div style="padding:2em; height:36vh; width: 100vw">
     <app-finances-settings></app-finances-settings>
 </div>
+<div class="d-flex justify-content-start title">Charts</div>
+<hr/>
+<app-charts-list></app-charts-list>
