--- a/finances-tracker/src/app/finances-configuration/source-result/source-result.component.css
+++ b/finances-tracker/src/app/finances-configuration/source-result/source-result.component.css
@@ -15,10 +15,6 @@ p
 
 .tag
 {
-    border: solid;
-    border-color: black;
-    margin: .5em;
-    border-radius: 20px;
-    padding: 0em 1em;
+    margin-right: .5em;
     background-color: rgb(255, 236, 127);
 }
