--- a/finances-tracker/src/app/finances-configuration/source-result/source-result.component.html
+++ b/finances-tracker/src/app/finances-configuration/source-result/source-result.component.html
@@ -9,10 +9,9 @@
         <br/>
         <span>Tags:</span>
         <br/>
-        <div class="d-flex justify-content-start"></div>
-        <span class="tag" *ngFor="let tag of getDistinctSourceTags">
+        <mat-chip class="tag" *ngFor="let tag of getDistinctSourceTags">
            {{tag}}
-        </span>
+        </mat-chip>
     </div>
     <div class="d-flex justify-content-between" style="padding-top: 1em;">
         <button class="btn btn-primary">
