Add real values in the header

--- a/finances-tracker/src/app/app-header/app-header.component.html
+++ b/finances-tracker/src/app/app-header/app-header.component.html
@@ -2,6 +2,8 @@
     <div>
         Welcome Back!
     </div>
+    <div>
+    </div>
     <div class="d-flex">
         <div class="d-inline-block">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="green" class="bi bi-graph-up-arrow" viewBox="0 0 16 16">
