--- a/finances-tracker/src/app/app.component.html
+++ b/finances-tracker/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header [income]="41211" [outcome]="7541"></app-header>
+<app-header [income]="income" [outcome]="outcome"></app-header>
 <div class="d-flex justify-content-start title">Sources</div>
 <hr/>
 <div style="padding:2em; height:36vh; width: 100vw">
